2001-11-15  Andreas Jaeger  <aj@suse.de>

	* include/features.h (__GLIBC_HAVE_LONG_LONG): Define for
	compilers that support it.

	* posix/sys/types.h: Use __GLIBC_HAVE_LONG_LONG.
	* sysdeps/unix/sysv/linux/bits/types.h: Likewise.
	* stdlib/stdlib.h: Likewise.

2001-11-17  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex.c (byte_re_match_2_internal): For gcc replace switch
	statement with gotos.
	Based on a patch by Paolo Bonzini <bonzini@pc-amo3.elet.polimi.it>.

2001-11-16  Stephen L Moshier  <moshier@mediaone.net>

	* sysdeps/ieee754/ldbl-96/s_erfl.c (__erfcl): Fix K&R header.

2001-11-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/unwind-dw2-fde.c: Don't use recursive mutexes.

2001-10-02  Jakub Jelinek  <jakub@redhat.com>
	    H.J. Lu  <hjl@gnu.org>

	* configure.in (libc_cv_gcc_static_libgcc): Set to -static-libgcc
	if gcc supports this flag.
	(EXPORT_UNWIND_FIND_FDE): Define unless target configure disables it.
	(gcc3): Allow glibc to be compiled with gcc 3.x.
	* config.h.in (EXPORT_UNWIND_FIND_FDE): Add.
	* config.make.in (static-libgcc, unwind-find-fde): Add.
	* Makerules (build-shlib-helper, build-module-helper): Use it.
	* scripts/versions.awk: Make sure GLIBC_ versions come first.
	* elf/soinit.c (__libc_global_ctors): Set tbases and dbases if
	necessary.
	(_fini): Call __deregister_frame_info_bases if
	__register_frame_info_bases was used to register.
	* elf/Versions (__register_frame_info, __deregister_frame_info): Add
	for GLIBC_2.0.
	(__register_frame_info_bases, __register_frame_info_table_bases,
	__deregister_frame_info_bases, _Unwind_Find_FDE): Add for GLIBC_2.2.5.
	* elf/Makefile (routines): Add unwind-dw2-fde.
	(shared-only-routines): Add unwind-dw2-fde.
	* sysdeps/alpha/gccframe.h: New file.
	* sysdeps/arm/gccframe.h: New file.
	* sysdeps/generic/framestate.c: New file.
	* sysdeps/generic/dwarf2.h: New file.
	* sysdeps/generic/gccframe.h (struct object): Update from gcc 3.0.
	* sysdeps/generic/unwind-dw2-fde.c: New file.